--- a/css/styles.css
+++ b/css/styles.css
@@ -58,9 +58,9 @@ body {
   color: var(--white);
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.87x;
+  line-height: 1.87;
   letter-spacing: 0.06em;
-  min-width: 200;
+  min-width: 200px;
   height: 50px;
   padding: 10px 32px;
 }
@@ -79,7 +79,7 @@ body {
 .button.secondary:focus {
   background-color: var(--accent);
   color: var(--white);
-  -list}
+  }
 
 /* ---------------------------------------------------------header--------------------------------------------------- */
 
