--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 .container {
-  width: 1230px;
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -79,7 +79,7 @@ body {
 .button.secondary:focus {
   background-color: var(--accent);
   color: var(--white);
-  }
+}
 
 /* ---------------------------------------------------------header--------------------------------------------------- */
 
@@ -91,7 +91,7 @@ body {
 }
 
 .logo {
-    color: var(--title-text);
+  color: var(--title-text);
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -173,10 +173,6 @@ body {
 }
 /* =-=---------------------------features-------=--=-------------------------------- */
 
-.features-text {
-  width: 270px;
-}
-
 .features-list {
   display: flex;
   justify-content: space-between;
@@ -242,8 +238,7 @@ body {
 
 .team .item {
   background-color: var(--white);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-   0px 1px 1px rgba(0, 0, 0, 0.14),
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .team-title {
@@ -290,21 +285,31 @@ body {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-      }
+}
+.portfolio-list .porfolio-text,
+.portfolio-list .portfolio-title {
+  padding-left: 28px;
+}
 
-    .portfolio-list .item {
-      margin-right: 30px;
-      margin-bottom: 30px;
-      border: 1px solid #EEEEEE;
-    }
+.portfolio-list .item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  width: 370px;
+  height: 404px;
+  right: 616px;
+  top: 116px;
 
-    .portfolio-list .item:nth-child(3n) {
-      margin-right: 0;
-    }
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+}
 
-    .portfolio-list .item:nth-last-child(-n + 3) {
-      margin-bottom: 0;
-    }
+.portfolio-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.portfolio-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
 
 .portfolio {
   padding-top: 94px;
@@ -354,7 +359,7 @@ body {
 
 .contacts a {
   margin-top: 9px;
-   color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.71;
   font-style: normal;
