--- a/css/styles.css
+++ b/css/styles.css
@@ -238,6 +238,7 @@ body {
 
 .team .item {
   background-color: var(--white);
+  border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -298,7 +299,6 @@ body {
   height: 404px;
   right: 616px;
   top: 116px;
-
   background: #ffffff;
   border: 1px solid #eeeeee;
 }
