--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,8 @@ body {
 }
 .portfolio-list .porfolio-text,
 .portfolio-list .portfolio-title {
-  padding-left: 28px;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .portfolio-list .item {
