--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,8 @@ body {
   font-style: normal;
 }
 
-.footer a {
+.footer .mail,
+.footer .tel {
    color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.71;
